--- a/public/style.css
+++ b/public/style.css
@@ -1,36 +1,48 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap");
 
 body {
-  font-family: "Montserrat", sans-serif;
-  background: #254d60;
+  font-family: "Poppins", sans-serif;
+  background: #444044;
 }
 
 h2 {
-  font-size: 18px;
+  font-size: 1.2rem;
   padding: 10px 20px;
+  font-weight: 700;
   color: #fff;
 }
 
 #chat {
   max-width: 600px;
+  height: 655px;
   margin: 30px auto;
-  background: #37718e;
-  border: 1px solid #37718e;
+  background: rgb(1, 16, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(1, 16, 255, 1) 0%,
+    rgba(77, 99, 207, 1) 100%
+  );
+  border: 2px solid #0110ff;
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.05);
-  border-radius: 5px;
+  border-radius: 25px;
 }
 
 #chat-window {
   height: 400px;
   overflow: auto;
-  background: #42809b;
+  background: #fff;
+  border-bottom: 3px solid #7389c3;
+  border-radius: 10px 10px 0px 0px;
 }
 
 #output p {
   padding: 14px 0px;
   margin: 0 20px;
-  border-bottom: 1px solid #e9e9e9;
-  color: #fff;
+  border-bottom: 1px solid #444044;
+  color: #444044;
+  font-weight: 700;
+  font-size: 1rem;
 }
 
 #feedback p {
@@ -40,7 +52,9 @@ h2 {
 }
 
 #output strong {
-  color: #b5f4e9;
+  color: #4d63cf;
+  font-weight: 900;
+  text-transform: uppercase;
 }
 
 label {
@@ -49,27 +63,73 @@ label {
   padding: 10px 20px;
 }
 
+.take {
+  width: 100%;
+  background: #fff;
+  margin: 0px;
+  padding-top: 15px;
+  border-radius: 0px 0px 25px 25px;
+  display: flex;
+  flex-direction: column;
+}
 input {
   padding: 10px 20px;
   box-sizing: border-box;
-  background: #63aabf;
+  margin: 5px auto;
+  background: rgb(1, 16, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(1, 16, 255, 1) 35%,
+    rgba(77, 99, 207, 1) 100%
+  );
   color: #fff;
   border: 0;
+  border-radius: 30px;
   display: block;
-  width: 100%;
-  border-bottom: 1px solid #37718e;
+  width: 90%;
   font-size: 16px;
+  outline: none;
 }
 
 input::placeholder {
   color: #fff;
+  font-weight: 100;
 }
-button {
-  background: #37718e;
+/* button {
+  background: #0110ff;
   color: #fff;
   font-size: 18px;
   border: 0;
-  padding: 12px 0;
-  width: 100%;
-  border-radius: 0 0 2px 2px;
+  padding: 0.8rem 2.5rem;
+  text-align: center;
+  width: 100px;
+  height: 50px;
+  margin: 10px auto;
+  border-radius: 20px;
+} */
+
+.btn {
+  font-size: 1rem;
+  font-weight: 600;
+  border: 2px solid transparent;
+  outline: none;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+
+.btn-send {
+  padding: 0.2rem 0.5rem;
+  background: #0110ff;
+  border-radius: 150px;
+  color: #fff;
+  font-size: 1.3rem;
+  font-weight: 500;
+  width: 30%;
+  margin: 10px auto;
+}
+
+.btn-send:hover {
+  background: transparent;
+  border: 2.5px solid #0110ff;
+  color: #0110ff;
 }
