--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,7 @@ h2 {
     rgba(1, 16, 255, 1) 0%,
     rgba(77, 99, 207, 1) 100%
   );
-  border: 2px solid #0110ff;
+  /* border: 2px solid #0110ff; */
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.05);
   border-radius: 25px;
 }
